carousel jumping fixed, id fixed

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -63,6 +63,11 @@
   &__child {
     display: inline-block;
     width: 100%;
+
+    .product {
+      max-width: 100%;
+      height: 400px;
+    }
   }
 
   i.icon {
@@ -72,24 +77,15 @@
 
 @media (max-width: 768px) {
   .carousel {
-    max-height: 850px;
+    max-height: 980px;
     width: 80%;
     align-items: center;
-    padding-left: 5%;
-    &__child {
-      padding: 0 !important;
-      display: inline-block;
-      text-align: center;
-      vertical-align: top;
-      width: 100%;
-      padding: 5px;
-      white-space: normal;
-      max-height: 850px !important;
 
+    &__child {
       .product {
         padding: 20px;
         max-width: 100%;
-        height: auto;
+        height: 980px;
       }
     }
 
@@ -99,8 +95,65 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 680px) {
   .carousel{
-    height: 600px;
+    &__child {
+      .product {
+        height: 850px;
+      }
+    }
+    
   }
 }
+
+@media (max-width: 600px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 800px;
+      }
+    }
+    
+  }
+}
+
+@media (max-width: 540px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 680px;
+      }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 590px;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 540px;
+      }
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  .carousel{
+    &__child {
+      .product {
+        height: 480px;
+      }
+    }
+  }
+}
+
